--- a/testetstsss.vcxproj
+++ b/testetstsss.vcxproj
@@ -149,7 +149,7 @@
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="hash_table_class.h" />
-    <ClInclude Include="manga_classes.h" />
+    <ClInclude Include="main_classes.h" />
     <ClInclude Include="init_mod.h" />
     <ClInclude Include="main_interface.h" />
     <ClInclude Include="pch.h" />
